samples/_failures_safe/1761279608_904a19_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_acf3c6b5.c: In function ‘get_next_token’:
./samples/SAFE/__tmp_acf3c6b5.c:133:9: error: expected expression at end of input
  133 |         token.type =
      |         ^~~~~
./samples/SAFE/__tmp_acf3c6b5.c:133:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_acf3c6b5.c:133:9: error: expected declaration or statement at end of input
